- add new documentation page component/checkbox - fix alignment on checkbox, radio, and switch component when there is subText

--- a/src/components/ui/checkbox-button/styles.scss
+++ b/src/components/ui/checkbox-button/styles.scss
@@ -96,6 +96,10 @@
 
     &:has(.text-sublabel){
         align-items: start;
+        .icon-before{
+            min-height: calc(var(--font-size) + 5px);
+            align-items: end;
+        }
     }
 }
 
